modularized the code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <!-- <button id="searchButton">Search</button> -->
   <div id='result'></div>
   <!-- <iframe src="" id='myFrame'></iframe> -->
+  <script src="js/commands.js"></script>
+  <script src="js/helperFunctions.js"></script>
+  <script src="js/notepad.js"></script>
+  <script src="js/links.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
